log/2025_06_12/03h23m33s/expand_variables/comp_stderr.log
/media/sf_42/C3_Minishell/Minishell/tests/src/unitests/test_expand_variables.c:253:58: error: missing terminating '"' character [-Werror,-Winvalid-pp-token]
        char *d5 = "\"\'$v1\' \'$\'v1 \'$v\'1 \'$\'\'v\'\'1\'\\"";
                                                                ^
/media/sf_42/C3_Minishell/Minishell/tests/src/unitests/test_expand_variables.c:253:58: error: expected ';' at end of declaration
        char *d5 = "\"\'$v1\' \'$\'v1 \'$v\'1 \'$\'\'v\'\'1\'\\"";
                                                                ^
                                                                ;
/media/sf_42/C3_Minishell/Minishell/tests/src/unitests/test_expand_variables.c:255:32: error: use of undeclared identifier 'rd5'
        nb_err += test(env_lst_1, d5, rd5);
                                      ^
3 errors generated.
